--- a/app/src/main/res/layout/item_species_select.xml
+++ b/app/src/main/res/layout/item_species_select.xml
@@ -13,6 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:clickable="true"
         android:focusable="false"
         android:focusableInTouchMode="false" />
 
