--- a/app/src/main/res/layout/popup_alarm.xml
+++ b/app/src/main/res/layout/popup_alarm.xml
@@ -5,7 +5,9 @@
     android:background="@drawable/popup_background_cms"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:scaleX="1.1"
+    android:scaleY="1.1">
 
 
     <!-- Time Picker -->
@@ -16,7 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:amPmTextColor="@color/black"
         android:background="@color/golden"
+        android:numbersTextColor="@color/black"
+        android:scaleX="1.1"
+        android:scaleY="1.1"
+        android:theme="@style/TimePickerFixTheme"
         android:timePickerMode="spinner" />
 
     <LinearLayout
