--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="TimePickerFixTheme" parent="Theme.AppCompat.Light.Dialog">
+    <item name="android:textColorPrimary">#000000</item> <!-- black -->
+        <item name="android:textSize">20sp</item> <!-- bigger numbers -->
+    </style>
 
 </resources>
