--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -482,7 +482,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/totalRealWeight"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.379"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sixthRealWeight" />
 
@@ -497,8 +496,7 @@
         android:textColor="@color/clip_blue"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/totalRealWeight"
-        app:layout_constraintBottom_toBottomOf="@id/totalRealWeight"
+        app:layout_constraintTop_toBottomOf="@id/tglVoiceOnLbs"
         app:layout_constraintEnd_toStartOf="@id/totalRealWeight"
         android:layout_marginEnd="15dp"/>
 
@@ -506,16 +504,15 @@
         android:id="@+id/totalRealWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginEnd="25dp"
         android:background="@color/clip_white"
         android:gravity="center"
         android:textAlignment="gravity"
         android:textColor="@color/black"
         android:textSize="48sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/sixthRealWeight"
+        app:layout_constraintEnd_toStartOf="@id/sixthDecWeight"
         app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/total_weightView"
         app:layout_constraintWidth_percent="0.2" />
@@ -533,12 +530,11 @@
         app:layout_constraintBottom_toBottomOf="@id/totalRealWeight"
         app:layout_constraintStart_toEndOf="@id/totalRealWeight" />
 
+
     <TextView
         android:id="@+id/totalDecWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="1dp"
         android:background="@color/clip_white"
         android:gravity="center"
         android:textAlignment="gravity"
@@ -556,42 +552,67 @@
         android:id="@+id/txtHolderOzs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textScaleX="0.3"
-        android:text="@string/ozs"
         android:gravity="bottom"
+        android:text="@string/ozs"
         android:textColor="@color/black"
+        android:textScaleX="0.3"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/totalDecWeight"
         app:layout_constraintStart_toEndOf="@id/totalDecWeight" />
 
-
-    <Button
-        android:id="@+id/btnMainPg"
-        android:layout_width="wrap_content"
+    <ToggleButton
+        android:id="@+id/tglVoiceOnLbs"
+        android:layout_width="90dp"
         android:layout_height="50dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/btn_outline_green"
+        android:background="@drawable/btn_outline_orange"
         android:paddingHorizontal="10dp"
-        android:text="@string/main_page"
+        android:text=""
         android:textAlignment="gravity"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@id/firstRealWeight"
-        app:layout_constraintTop_toBottomOf="@id/totalRealWeight" />
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sixthRealWeight" />
 
-    <Button
-        android:id="@+id/btnMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:paddingHorizontal="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/btn_outline_blue"
-        android:text="@string/setup"
-        android:textAlignment="gravity"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/firstDecWeight"
-        app:layout_constraintTop_toBottomOf="@id/totalRealWeight" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintTop_toBottomOf="@id/totalRealWeight" >
+
+        <Button
+            android:id="@+id/btnMainPg"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/btn_outline_green"
+            android:padding="10dp"
+            android:text="@string/main_page"
+            android:textAlignment="gravity"
+            android:textSize="22sp" />
+
+        <Button
+            android:id="@+id/btnMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/btn_outline_blue"
+            android:padding="10dp"
+            android:text="@string/setup"
+            android:textAlignment="gravity"
+            android:textSize="22sp" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
