--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -496,7 +496,8 @@
         android:textColor="@color/clip_blue"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tglVoiceOnLbs"
+        app:layout_constraintTop_toTopOf="@id/totalRealWeight"
+        app:layout_constraintBottom_toBottomOf="@id/totalRealWeight"
         app:layout_constraintEnd_toStartOf="@id/totalRealWeight"
         android:layout_marginEnd="15dp"/>
 
@@ -510,7 +511,7 @@
         android:textColor="@color/black"
         android:textSize="48sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/sixthDecWeight"
+        app:layout_constraintEnd_toEndOf="@id/sixthRealWeight"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -560,22 +561,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/totalDecWeight"
         app:layout_constraintStart_toEndOf="@id/totalDecWeight" />
-
-    <ToggleButton
-        android:id="@+id/tglVoiceOnLbs"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_outline_orange"
-        android:paddingHorizontal="10dp"
-        android:text=""
-        android:textAlignment="gravity"
-        android:textSize="22sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sixthRealWeight" />
 
 
     <LinearLayout
