--- a/app/src/main/res/layout/popup_length_entry_tour_inches.xml
+++ b/app/src/main/res/layout/popup_length_entry_tour_inches.xml
@@ -97,7 +97,7 @@
 
         </LinearLayout>
 
-        <!-- Length Input (Inches & 8ths) -->
+        <!-- Length Input (Inches & 4ths) -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -137,13 +137,13 @@
 
 
             <EditText
-                android:id="@+id/edtLengthTour8ths"
+                android:id="@+id/edtLengthQuarters"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:hint="@string/_0_7_8ths"
+                android:hint="@string/_0_3_4ths"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey"
@@ -157,7 +157,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="bottom"
-                android:text="@string/_8ths"
+                android:text="@string/_4ths"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"/>
@@ -189,7 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:text="@string/_8ths_of_inch"
+                android:text="@string/_4ths_of_inch"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
