--- a/app/src/main/res/layout/dialog_edit_catch_inches.xml
+++ b/app/src/main/res/layout/dialog_edit_catch_inches.xml
@@ -76,7 +76,7 @@
             android:textStyle="bold"/>
 
         <EditText
-            android:id="@+id/edtLength8ths"
+            android:id="@+id/edtLengthQuarters"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
